# tutorials

./: .gitattributes  .gitignore  README.md  README.rst  clean_notebooks.xonsh  clear_examples.py  echogram.ipynb  environment.yml  log.txt  pixi.toml  pyproject.toml  requirements.in  requirements.txt  test_notebooks.py  test_notebooks.xonsh  theping.ipynb
.github/workflows/: mybinder.yml  test_notebooks.yml
alex_sandbox/: A06_wedge_view_WCI.ipynb  B_view_WCI.ipynb  REAME.MD  alex_01_data_access_basic.ipynb  alex_02_data_access_advanced.ipynb  alex_03_WCI_viewer.ipynb  alex_04_extract_wcd.ipynb  alex_05_wedge_view_WCI.ipynb  mbes_echogram.ipynb
alex_sandbox/to_sort/: A_overview.ipynb  demo_make_wci.ipynb
binder/: Dockerfile  Dockerfile.notworking
demo/: .gitignore  .~lock.test.csv#  01_open_and_get_overview.ipynb  01_open_and_get_overview.ipynb.REMOVED.git-id  02_view_water_column data.ipynb  03_demo_wci.ipynb.REMOVED.git-id  demo_01_echogram_fu.ipynb  demo_01_echogram_new.ipynb  demo_01_introduction.ipynb  demo_01_kmall.ipynb  demo_02_file_caching.ipynb  demo_03_filter_pings_by_features.ipynb  demo_03_view_water_column data.ipynb  demo_04_extract_wcd.ipynb  demo_04_view_watercolumn_data.ipynb  demo_05_echograms.ipynb  demo_05_view_watercolumn_data_groups.ipynb  demo_05_wedge_view_wci.ipynb  demo_06_echograms.ipynb  demo_extract.ipynb  demo_make_wci.ipynb  demo_make_wci.ipynb.REMOVED.git-id  demoflow.ipynb  mbes_echogram.ipynb  pyproject.toml  test.tiff  test01-Copy1.ipynb  test01.ipynb  testfolder.txt  tutorial_01_data_access_basic.ipynb  tutorial_02_data_access_advanced.ipynb  tutorial_03_WCI_viewer.ipynb  tutorial_04_extract_wcd.ipynb  tutorial_05_wedge_view_WCI.ipynb  tutorial_06_echograms.ipynb  tutorial_07_datagrams.ipynb
demo/calibration/: 2.ipynb  3.ipynb  asdf.ipynb  beam-offsets.hd5  calib-TRX-2004.xlsx  calib-TRX-2031.xlsx  demo_01_self_calibration.ipynb  demo_02_cross_calibration.ipynb  depth_offsets.hd5  layer-data.pkl  test.xlsx  view_wci-Copy1.ipynb  view_wci.ipynb
demo/demo_05_echograms/: demo_05_echogram_ek80.ipynb  demo_05_echogram_em2040.ipynb
demo/ek80/: demo_01_introduction.ipynb
demo/functions/: open_ship_wh600.py  util.py
demo/test.zarr/: .zarray
echosounders/: index_asserts.ipynb  navigation.ipynb  raw_files-.ipynb  raw_files-FIL1.ipynb  raw_files-MRU0.ipynb  raw_files-NME0.ipynb  raw_files-RAW3.ipynb  raw_files-XML0.ipynb  raw_files-package-read.ipynb  raw_files-pings.ipynb  raw_files.ipynb  show_case.ipynb
exe/: pixi-x86_64-pc-windows-msvc.msi
gridding/: forwardgridder.ipynb
make_test_data/: .gitignore  0_get_testdata.ipynb  make_test_data.ipynb  make_test_data_kmall.ipynb  make_test_data_old.ipynb  test.py
make_test_data/config/: setup.conf
modules/gridding/: forwardgridder.ipynb
navigation/: geolocation.ipynb  navigastioninterpolator.ipynb  navigationinterpolator.ipynb  navtools.ipynb  positionaloffsets.ipynb  sensorconfiguration.ipynb  sensorcoordinatesystem.ipynb  sensordata.ipynb  sensoroffsets.ipynb  sensorpositionoffsets.ipynb  test
tools/: interpolation.ipynb  progressbars.ipynb  timeconv.ipynb
tutorials/: dev.txt  ping.txt  tutorial_01_data_access_basic.ipynb  tutorial_02_data_access_advanced.ipynb  tutorial_03_WCI_viewer.ipynb  tutorial_04_extract_wcd.ipynb  tutorial_05_wedge_view_WCI.ipynb  tutorial_06_echograms.ipynb  tutorial_07_datagrams.ipynb  tutorial_08_combine_mbes_sbes.ipynb
usage/: 1_kongsberg_access_datagrams.ipynb  2_kongsverg_access_pings.ipynb  3_kongsberg_plot_echograms.ipynb  5_navigation_data_processing.ipynb  demo_make_wci.ipynb.REMOVED.git-id  navigation_data_processing.ipynb  testfolder.txt
(+97 files in other folders)
