[project]
name = "tutorials"
version = "0.30.2"
description = "Tutorial notebooks for themachinethatgoesping"
authors = [
    {name = "Peter Urban",email = "peter.urban@ugent.be"}
]
license = {text = "CC0-1.0"}
readme = "README.rst"
requires-python = ">=3.11, <3.14"
dependencies = [ "jupyterlab-execute-time>=3.2.0,<4"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.tasks]
tests = "python test_notebooks.py"
jupyter = "jupyter lab ."

[tool.pixi.workspace]
channels = ["themachinethatgoesping", "conda-forge"]
platforms = [ "linux-64", "osx-arm64", "win-64"]
#platforms = ["linux-64"]

[tool.pixi.dependencies]
themachinethatgoesping = ">=0.30.2.dev1,<0.31"
jupyterlab = ">=4.4.3,<5"
matplotlib = ">=3.10.3,<4"
ipympl = ">=0.9.7,<0.10"
ipyleaflet = ">=0.20.0,<0.21"
pytest = ">=8.4.0,<9"
nbmake = ">=1.5.5,<2"

