[project]
authors = [{name = "Peter Urban", email = "peter.urban@ugent.be"}]
dependencies = []
name = "demo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["themachinethatgoesping", "conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
demo = { path = ".", editable = true }

[tool.pixi.tasks]
jupyter = "jupyter lab ."

[tool.pixi.dependencies]
themachinethatgoesping = ">=0.30.1,<0.31"
jupyterlab = ">=4.4.3,<5"
